# POMwJO_Projekt

dane/Szczeniory/: 20210624_182807_Pchełka_3151_3097_7985.txt  20210624_182926_Pchełka_3151_3097_7986.txt
sources/: CMakeLists.txt  main.cxx
